# xScraper

./: .gitignore  LICENSE  README.md  call_functions.ipynb  pyproject.toml
doc/logos/: logo_info.txt
xscraper/: google.py  utils.py
